# HPC-Parallel-Demo

./: LICENSE  README.md
backend/: .gitignore  README.md  README_API.md  app.py  image_processing.cpython-313-x86_64-linux-gnu.so.bak  requirements.txt  start_api.py  test_api.py  启动说明.md  故障排除指南.md
cpp/: CMakeLists.txt  image_processing.cpp
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.vue  main.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: ApiHealthIndicator.vue
frontend/src/config/: README.md  api.ts
frontend/src/router/: index.ts
frontend/src/services/: apiService.ts
frontend/src/views/: AboutView.vue  BasicConvolution.vue  BasicImageTransform.vue  CustomConvolution.vue  HomeView.vue  ImageStitching.vue
